# routes/api.php
@@ -19,7 +19,7 @@ use Illuminate\Support\Facades\Route;
 //Route::post('/register', [AuthController::class, 'register']);
 //Route::post('/login', [AuthController::class, 'login']);
 
-Route::post('/time', [TimeController::class, 'store']);
+Route::post('/times', [TimeController::class, 'store']);
 
 Route::middleware('auth:sanctum')->group(function () {
     //Route::post('/time', [TimeController::class, 'store']);
